Improve the deployment guides

--- a/deploy/docker-compose/postgres/.env.postgres.example
+++ b/deploy/docker-compose/postgres/.env.postgres.example
@@ -1,17 +1,16 @@
-APP_PUBLIC_FQDN=<INSERT_HERE_YOUR_APP_FQDN> # The FQDN used to expose this application (es: logicle.example.com)
+# Mandatory user-specific settings
+APP_PUBLIC_FQDN=<YOUR_APP_FQDN> # Fully Qualified Domain Name (FQDN) for application exposure (e.g., logic.example.com).
+NEXTAUTH_SECRET=<YOUR_BASE64_SECRET> # Base64-encoded secret for NextAuth. Generate with: openssl rand -base64 32
 
-# Authentication settings
-NEXTAUTH_SECRET=<INSERT_HERE_YOUR_BASE64_SECRET> # Generate a secret for NextAuth using the following command: openssl rand -base64 32
 
+###############################################################
+# Optional settings (defaults provided, modify if necessary)
+APP_URL=http://$APP_PUBLIC_FQDN # Application URL, based on APP_PUBLIC_FQDN.
+NEXTAUTH_URL=http://$APP_PUBLIC_FQDN # NextAuth URL, mirrors APP_URL.
 
-############################################
-# Default settings, change only if needed
-APP_URL=http://$APP_PUBLIC_FQDN
-NEXTAUTH_URL=http://$APP_PUBLIC_FQDN
-
-## Database settings
-DB_ENGINE=postgres
-POSTGRES_USER=admin
-POSTGRES_PASSWORD=admin
-POSTGRES_DB=logicle
-DATABASE_URL=postgres://$POSTGRES_USER:$POSTGRES_PASSWORD@postgres-db:5432/$POSTGRES_DB
+## Database configuration
+DB_ENGINE=postgres # Database engine.
+DB_USER=admin # Database user.
+DB_PASSWORD=admin # Database password.
+DB_NAME=logicle # Database name.
+DATABASE_URL=postgres://$DB_USER:$DB_PASSWORD@postgres-db:5432/$DB_NAME # URL for database connection.
