--- a/deploy/docker-compose/sqlite/.env.sqlite.example
+++ b/deploy/docker-compose/sqlite/.env.sqlite.example
@@ -11,4 +11,4 @@ NEXTAUTH_URL=http://$APP_PUBLIC_FQDN # NextAuth URL, mirrors APP_URL.
 # Database configuration
 DB_ENGINE=sqlite # Database engine (default: sqlite).
 DB_NAME=logicle # Database name.
-DATABASE_URL=file:///db/$DB_NAME # URL for database connection.
+DATABASE_URL=file:///data/sqlite/$DB_NAME # URL for database connection.
