Enhance Deployment Docs and .env File for Docker (#2)
* Add docker compose sqlite docs

* Complete the deployment guide

* Improve deployments

* Improve deployment docs

* Add enviroment variables to the docs

* Improve the deployment guides

* More docs updates

* Change default storage path from /tmp to /data

* Keep improving it

* Final README

--- a/deploy/docker-compose/sqlite/.env.sqlite.example
+++ b/deploy/docker-compose/sqlite/.env.sqlite.example
@@ -1,15 +1,14 @@
-APP_PUBLIC_FQDN=<INSERT_HERE_YOUR_APP_FQDN> # The FQDN used to expose this application (es: logicle.example.com)
+# Mandatory user-specific settings
+APP_PUBLIC_FQDN=<YOUR_APP_FQDN> # Fully Qualified Domain Name (FQDN) for application exposure (e.g., logic.example.com).
+NEXTAUTH_SECRET=<YOUR_BASE64_SECRET> # Base64-encoded secret for NextAuth. Generate with: openssl rand -base64 32
 
-# Authentication settings
-NEXTAUTH_SECRET=<INSERT_HERE_YOUR_BASE64_SECRET> # Generate a secret for NextAuth using the following command: openssl rand -base64 32
 
+###############################################################
+# Optional settings (defaults provided, modify if necessary)
+APP_URL=http://$APP_PUBLIC_FQDN # Application URL, based on APP_PUBLIC_FQDN.
+NEXTAUTH_URL=http://$APP_PUBLIC_FQDN # NextAuth URL, mirrors APP_URL.
 
-############################################
-# Default settings, change only if needed
-APP_URL=http://$APP_PUBLIC_FQDN
-NEXTAUTH_URL=http://$APP_PUBLIC_FQDN
-
-## Database settings
-DB_ENGINE=sqlite
-DB_NAME=logicle
-DATABASE_URL=file:///db/$DB_NAME
+# Database configuration
+DB_ENGINE=sqlite # Database engine (default: sqlite).
+DB_NAME=logicle # Database name.
+DATABASE_URL=file:///data/sqlite/$DB_NAME # URL for database connection.
