Set temp DATABASE_URL for build access

--- a/logicle/package.json
+++ b/logicle/package.json
@@ -6,8 +6,8 @@
     "dev": "next dev",
     "dev:sqlite": "npm run push:sqlite && DATABASE_URL=file:///tmp/logicle.sqlite npm run dev",
     "dev:postgres": "npm run push:postgres && DATABASE_URL=postgresql://admin:admin@localhost:5432/logicle npm run dev",
-    "build": "next build",
-    "start": "next start",
+    "build": "DATABASE_URL=file:///tmp/logicle.sqlite next build",
+    "start": "DATABASE_URL=file:///tmp/logicle.sqlite next start",
     "start:sqlite": "npm run push:sqlite && DATABASE_URL=file:///tmp/logicle.sqlite npm run start",
     "start:postgres": "npm run push:postgres && DATABASE_URL=postgresql://admin:admin@localhost:5432/logicle npm run start",
     "check-types": "tsc --pretty --noEmit",
