--- a/deploy/docker-compose/postgres/.env.postgres.example
+++ b/deploy/docker-compose/postgres/.env.postgres.example
@@ -13,4 +13,4 @@ DB_ENGINE=postgres # Database engine.
 POSTGRES_USER=admin # Database user.
 POSTGRES_PASSWORD=admin # Database password.
 POSTGRES_DB=logicle # Database name.
-DATABASE_URL=postgres://$DB_USER:$DB_PASSWORD@postgres-db:5432/$DB_NAME # URL for database connection.
+DATABASE_URL=postgres://$POSTGRES_USER:$POSTGRES_PASSWORD@postgres-db:5432/$POSTGRES_DB # URL for database connection.
