Deployment Documentation Fixes and Enhancements (#5)
* Add docker compose sqlite docs

* Complete the deployment guide

* Improve deployments

* Improve deployment docs

* Add enviroment variables to the docs

* Improve the deployment guides

* More docs updates

* Change default storage path from /tmp to /data

* Keep improving it

* Final README

* Set temp DATABASE_URL for build access

* Fix wrong .env links

* One link was still incorrect, now fixed

* Fix broken link

* Improve the copy

* Fix incorrect variable names

* Improve clarity

* Fix wrong env

--- a/deploy/docker-compose/postgres/.env.postgres.example
+++ b/deploy/docker-compose/postgres/.env.postgres.example
@@ -10,7 +10,7 @@ NEXTAUTH_URL=http://$APP_PUBLIC_FQDN # NextAuth URL, mirrors APP_URL.
 
 ## Database configuration
 DB_ENGINE=postgres # Database engine.
-DB_USER=admin # Database user.
-DB_PASSWORD=admin # Database password.
-DB_NAME=logicle # Database name.
-DATABASE_URL=postgres://$DB_USER:$DB_PASSWORD@postgres-db:5432/$DB_NAME # URL for database connection.
+POSTGRES_USER=admin # Database user.
+POSTGRES_PASSWORD=admin # Database password.
+POSTGRES_DB=logicle # Database name.
+DATABASE_URL=postgres://$POSTGRES_USER:$POSTGRES_PASSWORD@postgres-db:5432/$POSTGRES_DB # URL for database connection.
