--- a/deploy/docker-compose/postgres/docker-compose-postgres.yml
+++ b/deploy/docker-compose/postgres/docker-compose-postgres.yml
@@ -5,10 +5,10 @@ services:
     restart: always
     environment:
       PORT: 80
-      APP_URL: ${APP_URL}
+      APP_URL: http://$APP_PUBLIC_FQDN
       DB_ENGINE: ${DB_ENGINE}
       DATABASE_URL: ${DATABASE_URL}
-      NEXTAUTH_URL: ${NEXTAUTH_URL}
+      NEXTAUTH_URL: http://$APP_PUBLIC_FQDN
       NEXTAUTH_SECRET: ${NEXTAUTH_SECRET}
     ports:
       - 80:80
