Sdd DO_NOT_TRACK and BOXYHQ_NO_ANALYTICS options to disable boxyhq analytics #11

--- a/logicle/.env
+++ b/logicle/.env
@@ -5,3 +5,5 @@ NEXTAUTH_SECRET=rZTFtfNuSMajLnfFrWT2PZ3lX8WZv7W/Xs2H8hkEY6g=
 DB_ENGINE=sqlite
 DATABASE_URL=file:///data/sqlite/logicle.sqlite
 FILE_STORAGE_LOCATION=/data/files
+DO_NOT_TRACK=1
+BOXYHQ_NO_ANALYTICS=1
