--- a/logicle/package.json
+++ b/logicle/package.json
@@ -24,7 +24,7 @@
     "generate-kysely": "npx kysely-codegen --url /tmp/logicle.sqlite --out-file db/types.ts"
   },
   "dependencies": {
-    "@auth/kysely-adapter": "^0.1.7",
+    "@auth/kysely-adapter": "^0.6.0",
     "@foosoftsrl/saml-jackson": "0.17.1",
     "@heroicons/react": "2.0.18",
     "@hookform/resolvers": "^3.3.2",
@@ -65,8 +65,8 @@
     "micromatch": "^4.0.5",
     "moment": "2.29.4",
     "nanoid": "^5.0.4",
-    "next": "^14.1.0",
-    "next-auth": "^5.0.0-beta.5",
+    "next": "^14.1.3",
+    "next-auth": "^5.0.0-beta.9",
     "next-i18next": "13.3.0",
     "node-cache": "^5.1.2",
     "nodemailer": "6.9.4",
@@ -97,15 +97,17 @@
     "@testing-library/react": "14.0.0",
     "@trivago/prettier-plugin-sort-imports": "4.2.0",
     "@types/bcryptjs": "2.4.3",
+    "@types/better-sqlite3": "^7.6.9",
     "@types/jest": "29.5.4",
     "@types/mocha": "10.0.1",
     "@types/node": "^20.6.3",
     "@types/nodemailer": "6.4.9",
+    "@types/pg": "^8.11.2",
     "@types/react": "18.2.21",
     "@types/uuid": "9.0.3",
     "@typescript-eslint/eslint-plugin": "6.5.0",
     "@typescript-eslint/parser": "6.5.0",
-    "better-sqlite3": "^8.7.0",
+    "better-sqlite3": "^9.4.3",
     "eslint": "8.48.0",
     "eslint-config-next": "^13.5.6",
     "eslint-config-prettier": "9.0.0",
