--- a/deploy/docker-compose/postgres/docker-compose-postgres-proxy.yml
+++ b/deploy/docker-compose/postgres/docker-compose-postgres-proxy.yml
@@ -8,7 +8,7 @@ services:
       APP_URL: https://$APP_PUBLIC_FQDN
       DB_ENGINE: ${DB_ENGINE}
       DATABASE_URL: ${DATABASE_URL}
-      NEXTAUTH_URL: https://$APP_PUBLIC_FQDN
+      NEXTAUTH_URL: https://$APP_PUBLIC_FQDN/api/auth
       NEXTAUTH_SECRET: ${NEXTAUTH_SECRET}
     volumes:
       - uploaded-files-data:/data/files
@@ -30,6 +30,7 @@ services:
     restart: always
     command: caddy reverse-proxy --from https://${APP_PUBLIC_FQDN}:443 --to http://app:8080
     ports:
+      - 80:80
       - 443:443
     volumes:
       - caddy_data:/data
