--- a/deploy/docker-compose/sqlite/docker-compose-sqlite-proxy.yml
+++ b/deploy/docker-compose/sqlite/docker-compose-sqlite-proxy.yml
@@ -8,7 +8,7 @@ services:
       APP_URL: https://$APP_PUBLIC_FQDN
       DB_ENGINE: ${DB_ENGINE}
       DATABASE_URL: ${DATABASE_URL}
-      NEXTAUTH_URL: https://$APP_PUBLIC_FQDN
+      NEXTAUTH_URL: https://$APP_PUBLIC_FQDN/api/auth
       NEXTAUTH_SECRET: ${NEXTAUTH_SECRET}
     volumes:
       - sqlite-data:/data/sqlite
@@ -19,6 +19,7 @@ services:
     restart: always
     command: caddy reverse-proxy --from https://${APP_PUBLIC_FQDN}:443 --to http://app:8080
     ports:
+      - 80:80
       - 443:443
     volumes:
       - caddy_data:/data
