--- a/deploy/docker-compose/docker-compose-postgres-proxy.yml
+++ b/deploy/docker-compose/docker-compose-postgres-proxy.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   app:
-    image: ghcr.io/logicleai/logicle:latest
+    image: ghcr.io/logicleai/logicle:v0.1
     restart: always
     environment:
       PORT: 8080
@@ -11,8 +11,19 @@ services:
       NEXTAUTH_URL: https://$APP_PUBLIC_FQDN/api/auth
       NEXTAUTH_SECRET: ${NEXTAUTH_SECRET}
     volumes:
-      - sqlite-data:/data/sqlite
       - uploaded-files-data:/data/files
+
+  postgres-db:
+    image: postgres:latest
+    restart: always
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+    ports:
+      - 5432:5432
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
 
   caddy:
     image: caddy:2
@@ -28,7 +39,7 @@ services:
       - app
 
 volumes:
-  sqlite-data:
   uploaded-files-data:
+  postgres-data:
   caddy_data:
   caddy_config:
