--- a/deploy/docker-compose/docker-compose-postgres.yml
+++ b/deploy/docker-compose/docker-compose-postgres.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   app:
-    image: ghcr.io/logicleai/logicle:latest
+    image: ghcr.io/logicleai/logicle:v0.1
     restart: always
     environment:
       PORT: 80
@@ -13,9 +13,20 @@ services:
     ports:
       - 80:80
     volumes:
-      - sqlite-data:/data/sqlite
       - uploaded-files-data:/data/files
 
+  postgres-db:
+    image: postgres:latest
+    restart: always
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+    ports:
+      - 5432:5432
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+
 volumes:
-  sqlite-data:
   uploaded-files-data:
+  postgres-data:
