Locking APIs when env SSO_CONFIG_LOCK is 1

--- a/logicle/.env
+++ b/logicle/.env
@@ -7,3 +7,4 @@ DATABASE_URL=file:///data/sqlite/logicle.sqlite
 FILE_STORAGE_LOCATION=/data/files
 DO_NOT_TRACK=1
 BOXYHQ_NO_ANALYTICS=1
+SSO_CONFIG_LOCK=0
