--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,7 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
+            type=sha,format=long
             type=semver,pattern={{raw}}
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
@@ -41,8 +42,6 @@ jobs:
         with:
           context: .
           push: ${{ github.event_name == 'workflow_dispatch' || github.event_name == 'release' }}
-          tags: |
-            ghcr.io/logicleai/logicle:${{ github.sha }}
-            ${{ steps.meta.outputs.tags }}
+          tags: ${{ steps.meta.outputs.tags }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
