--- a/logicle/package.json
+++ b/logicle/package.json
@@ -72,6 +72,7 @@
     "nodemailer": "6.9.4",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
+    "react-content-loader": "^7.0.0",
     "react-day-picker": "^8.9.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
