Add modules as a path

--- a/logicle/tsconfig.json
+++ b/logicle/tsconfig.json
@@ -19,6 +19,7 @@
     "noImplicitAny": false,
     "paths": {
       "@/lib/*": ["lib/*"],
+      "@/models/*": ["models/*"],
       "@/components/*": ["components/*"],
       "@/services/*": ["services/*"],
       "@/utils/*": ["utils/*"],
