Integrate Anthropic LLM Support (#71)
* Start implementing anthropic

* Start migrating to llmosaic

* Keep implementing

* Keep implementing

* Bump up to anthropic 0.1.7

* Keep implementing

* Upgrade to llmosaic version 0.1.8

* Add modules as a path

* Add anthropic to the Backend UI selection

* Refactor LLM Provider Code for Streamlined Operation

* Start migrating from functions to tools

* Bump up llmosaic version to 0.1.9

* Complete migration to tools

* Update package lock

* Correct plugin implementation

* Fix i18n error

* Show model name instead of id in the assistant creation page

--- a/logicle/package.json
+++ b/logicle/package.json
@@ -28,6 +28,7 @@
     "@foosoftsrl/saml-jackson": "0.17.1",
     "@heroicons/react": "2.0.18",
     "@hookform/resolvers": "^3.3.2",
+    "@logicleai/llmosaic": "^0.1.9",
     "@microsoft/fetch-event-source": "^2.0.1",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -60,7 +61,6 @@
     "i18next-resources-to-backend": "^1.1.4",
     "js-tiktoken": "^1.0.8",
     "kysely": "^0.26.3",
-    "llmosaic": "^0.1.1",
     "lucide-react": "^0.284.0",
     "micromatch": "^4.0.5",
     "moment": "2.29.4",
