Migration (dirty!) to dedicated images table

--- a/logicle/package.json
+++ b/logicle/package.json
@@ -3,12 +3,12 @@
   "version": "0.2.2",
   "scripts": {
     "dev": "next dev",
-    "dev:sqlite": "npm run push:sqlite && DATABASE_URL=file:///tmp/logicle.sqlite npm run dev",
-    "dev:postgres": "npm run push:postgres && DATABASE_URL=postgresql://admin:admin@localhost:5432/logicle npm run dev",
+    "dev:sqlite": "DATABASE_URL=file:///tmp/logicle.sqlite npm run dev",
+    "dev:postgres": "DATABASE_URL=postgresql://admin:admin@localhost:5432/logicle npm run dev",
     "build": "DATABASE_URL=file:///tmp/logicle.sqlite next build",
     "start": "DATABASE_URL=file:///tmp/logicle.sqlite next start",
-    "start:sqlite": "npm run push:sqlite && DATABASE_URL=file:///tmp/logicle.sqlite npm run start",
-    "start:postgres": "npm run push:postgres && DATABASE_URL=postgresql://admin:admin@localhost:5432/logicle npm run start",
+    "start:sqlite": "DATABASE_URL=file:///tmp/logicle.sqlite npm run start",
+    "start:postgres": "DATABASE_URL=postgresql://admin:admin@localhost:5432/logicle npm run start",
     "check-types": "tsc --pretty --noEmit",
     "check-format": "prettier --check .",
     "check-lint": "eslint . --ext ts --ext tsx --ext js",
