--- a/deploy/docker-compose/docker-compose-postgres-proxy.yml
+++ b/deploy/docker-compose/docker-compose-postgres-proxy.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   app:
-    image: ghcr.io/logicleai/logicle:v0.2.2
+    image: ghcr.io/logicleai/logicle:v0.3.0
     restart: always
     environment:
       PORT: 8080
@@ -12,18 +12,20 @@ services:
       NEXTAUTH_SECRET: ${NEXTAUTH_SECRET}
     volumes:
       - uploaded-files-data:/data/files
+    networks:
+      - logicle-network
 
   postgres-db:
-    image: postgres:latest
+    image: postgres:16.3
     restart: always
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
-    ports:
-      - 5432
     volumes:
       - postgres-data:/var/lib/postgresql/data
+    networks:
+      - logicle-network
 
   caddy:
     image: caddy:2
@@ -37,9 +39,14 @@ services:
       - caddy_config:/config
     depends_on:
       - app
+    networks:
+      - logicle-network
 
 volumes:
   uploaded-files-data:
   postgres-data:
   caddy_data:
   caddy_config:
+
+networks:
+  logicle-network:
