--- a/deploy/docker-compose/docker-compose-postgres.yml
+++ b/deploy/docker-compose/docker-compose-postgres.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   app:
-    image: ghcr.io/logicleai/logicle:v0.3.0
+    image: ghcr.io/logicleai/logicle:v0.2.2
     restart: always
     environment:
       PORT: 80
@@ -14,24 +14,19 @@ services:
       - 80:80
     volumes:
       - uploaded-files-data:/data/files
-    networks:
-      - logicle-network
 
   postgres-db:
-    image: postgres:16.3
+    image: postgres:latest
     restart: always
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
+    ports:
+      - 5432
     volumes:
       - postgres-data:/var/lib/postgresql/data
-    networks:
-      - logicle-network
 
 volumes:
   uploaded-files-data:
   postgres-data:
-
-networks:
-  logicle-network:
