--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -12,4 +12,4 @@ tasks:
     init: npm i -g mintlify -y
     command: |
       cd /workspace/logicle/docs
-      mintlify dev
+      mintlify dev --port 3333
