--- a/logicle/package.json
+++ b/logicle/package.json
@@ -81,7 +81,7 @@
     "react-markdown": "^9.0.0",
     "react-syntax-highlighter": "^15.5.0",
     "recharts": "^2.8.0",
-    "rehype-mathjax": "^5.0.0",
+    "rehype-katex": "^7.0.0",
     "remark-gfm": "4.0",
     "remark-math": "^6.0.0",
     "sharp": "^0.32.6",
