--- a/logicle/package.json
+++ b/logicle/package.json
@@ -126,5 +126,10 @@
   "lint-staged": {
     "*.{js,ts}": "eslint --cache --fix",
     "*.{js,ts,css,md}": "prettier --write"
+  },
+  "overrides": {
+    "@auth/kysely-adapter": {
+      "kysely": "^0.27.4"
+    }
   }
 }
