--- a/deploy/docker-compose/dev/server/Dockerfile
+++ b/deploy/docker-compose/dev/server/Dockerfile
@@ -1,2 +1,10 @@
 FROM python:3.11
 
+WORKDIR /app
+
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
+
+COPY src/ ./src/
+
+CMD ["uvicorn", "src.server:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
