--- a/deploy/docker-compose/dev/.env
+++ b/deploy/docker-compose/dev/.env
@@ -6,5 +6,5 @@ NEXTAUTH_SECRET=<YOUR_BASE64_SECRET> # Base64-encoded secret for NextAuth. Gener
 
 ## Database configuration
 DB_ENGINE=sqlite # Database engine.
-SQLITE_DB=logicle # Database name.
+SQLITE_DB=logicle.sqlite # Database name.
 DATABASE_URL=file:///db/$SQLITE_DB # URL for database connection.
