--- a/logicle/.env
+++ b/logicle/.env
@@ -14,3 +14,4 @@ ENABLE_TOOLS=0
 ENABLE_CHAT_FILE_UPLOAD=1
 ENABLE_SIGNUP=1
 ENABLE_CHAT_AUTOSUMMARY=1
+CHAT_FILE_UPLOAD_ALLOWED_FORMATS=image/jpeg,image/png,image/webp,image/gif
