--- a/logicle/.env
+++ b/logicle/.env
@@ -11,5 +11,7 @@ SSO_CONFIG_LOCK=0
 LLM_PROVIDER_CONFIG_LOCK=0
 ENABLE_WORKSPACES=1
 ENABLE_TOOLS=0
+ENABLE_CHAT_ATTACHMENTS=1
 ENABLE_SIGNUP=1
 ENABLE_CHAT_AUTOSUMMARY=1
+CHAT_ATTACHMENTS_ALLOWED_FORMATS=image/jpeg,image/png,image/webp,image/gif
