--- a/logicle/package.json
+++ b/logicle/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^0.0.48",
+    "@ai-sdk/google-vertex": "^0.0.35",
     "@ai-sdk/openai": "^0.0.54",
     "@auth/kysely-adapter": "^1.4.2",
     "@boxyhq/saml-jackson": "1.27.0",
