Initial prompt support

--- a/logicle/package.json
+++ b/logicle/package.json
@@ -6,9 +6,9 @@
     "dev:sqlite": "DATABASE_URL=file:///tmp/logicle.sqlite npm run dev",
     "dev:postgres": "DATABASE_URL=postgresql://admin:admin@localhost:5432/logicle npm run dev",
     "build": "DATABASE_URL=file:///tmp/logicle.sqlite next build",
-    "start": "DATABASE_URL=file:///tmp/logicle.sqlite next start",
-    "start:sqlite": "DATABASE_URL=file:///tmp/logicle.sqlite npm run start",
-    "start:postgres": "DATABASE_URL=postgresql://admin:admin@localhost:5432/logicle npm run start",
+    "start": "npm run start:sqlite",
+    "start:sqlite": "DATABASE_URL=file:///tmp/logicle.sqlite next start",
+    "start:postgres": "DATABASE_URL=postgresql://admin:admin@localhost:5432/logicle next start",
     "check-types": "tsc --pretty --noEmit",
     "check-format": "prettier --check .",
     "check-lint": "eslint . --ext ts --ext tsx --ext js",
