--- a/logicle/package.json
+++ b/logicle/package.json
@@ -63,6 +63,7 @@
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-resources-to-backend": "^1.1.4",
     "js-tiktoken": "^1.0.8",
+    "json-schema": "^0.4.0",
     "kysely": "^0.27.4",
     "lucide-react": "^0.376.0",
     "micromatch": "^4.0.5",
