--- a/logicle/package.json
+++ b/logicle/package.json
@@ -94,6 +94,7 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "9.0.0",
+    "winston": "^3.15.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
