--- a/logicle/.env
+++ b/logicle/.env
@@ -15,3 +15,4 @@ ENABLE_CHAT_ATTACHMENTS=1
 ENABLE_SIGNUP=1
 ENABLE_CHAT_AUTOSUMMARY=1
 CHAT_ATTACHMENTS_ALLOWED_FORMATS=image/jpeg,image/png,image/webp,image/gif
+ENABLE_LOGICLE_CLOUD_IMAGE_PROXY=0
