Upgrade next.js to 15 (and next-auth 5 beta 24) (#242)
* Upgrade next.js to 15 (and next-auth)

* Added description to AlertDialog

* await route params in requireAdmin and requireSession

Also... simpler signature for requireSession callback

* Simpler signature for requireAdmin callback

* Removed serverExternalPackage typeorm (not sure...)

* Upgraded recharts. Not clear why, but it was broken by nextjs 15

* Upgrade node to 20.18, fixed podman build

* Oops... it was node 20.18!

--- a/logicle/package.json
+++ b/logicle/package.json
@@ -2,7 +2,7 @@
   "name": "@logicleai/logicle",
   "version": "0.7.1",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "dev:sqlite": "DATABASE_URL=file:///tmp/logicle.sqlite npm run dev",
     "dev:postgres": "DATABASE_URL=postgresql://admin:admin@localhost:5432/logicle npm run dev",
     "build": "DATABASE_URL=file:///tmp/logicle.sqlite next build",
@@ -70,8 +70,8 @@
     "micromatch": "^4.0.5",
     "moment": "2.29.4",
     "nanoid": "^5.0.4",
-    "next": "^14.2.0",
-    "next-auth": "^5.0.0-beta.19",
+    "next": "^15.0.2",
+    "next-auth": "^5.0.0-beta.24",
     "next-i18next": "13.3.0",
     "node-cache": "^5.1.2",
     "nodemailer": "6.9.4",
@@ -85,7 +85,7 @@
     "react-i18next": "12.3.1",
     "react-markdown": "^9.0.0",
     "react-syntax-highlighter": "^15.5.0",
-    "recharts": "^2.8.0",
+    "recharts": "^2.13.3",
     "rehype-katex": "^7.0.0",
     "remark-gfm": "4.0",
     "remark-math": "^6.0.0",
