--- a/logicle/package.json
+++ b/logicle/package.json
@@ -27,6 +27,7 @@
     "@boxyhq/saml-jackson": "1.27.0",
     "@hookform/resolvers": "^3.3.2",
     "@microsoft/fetch-event-source": "^2.0.1",
+    "@monaco-editor/react": "^4.6.0",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
