--- a/logicle/package.json
+++ b/logicle/package.json
@@ -25,9 +25,9 @@
     "@ai-sdk/openai": "^0.0.54",
     "@auth/kysely-adapter": "^1.4.2",
     "@boxyhq/saml-jackson": "1.27.0",
+    "@codemirror/lang-yaml": "^6.1.1",
     "@hookform/resolvers": "^3.3.2",
     "@microsoft/fetch-event-source": "^2.0.1",
-    "@monaco-editor/react": "^4.6.0",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -48,6 +48,7 @@
     "@readme/openapi-parser": "^2.6.0",
     "@tabler/icons-react": "^2.46.0",
     "@tailwindcss/typography": "0.5.9",
+    "@uiw/react-codemirror": "^4.23.6",
     "ai": "^3.3.20",
     "autoprefixer": "^10.4.16",
     "bcryptjs": "2.4.3",
