--- a/logicle/package.json
+++ b/logicle/package.json
@@ -23,6 +23,7 @@
     "@ai-sdk/anthropic": "^0.0.48",
     "@ai-sdk/google-vertex": "^0.0.35",
     "@ai-sdk/openai": "^0.0.54",
+    "@apidevtools/openapi-schemas": "^2.1.0",
     "@auth/kysely-adapter": "^1.4.2",
     "@boxyhq/saml-jackson": "1.27.0",
     "@codemirror/lang-yaml": "^6.1.1",
@@ -94,6 +95,7 @@
     "tailwindcss-animate": "^1.0.7",
     "uuid": "9.0.0",
     "winston": "^3.15.0",
+    "yaml": "^2.6.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -117,7 +119,7 @@
     "eslint-config-next": "^13.5.6",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-react": "7.33.2",
-    "jest": "29.6.4",
+    "jest": "^29.7.0",
     "jest-environment-jsdom": "29.6.4",
     "kysely-codegen": "^0.11.0",
     "lint-staged": "14.0.1",
