Improve openapi tool editing (#257)
* Add monaco editor

* Switched to CodeMirror

* FIxed check for exception with marks when parsing openapi

* Fixed parameter existence check in tool invocation

* Using 'yaml' as parser, more powerful

* Migrate to 'yaml' package

* Fixed react warning about missing keys

* Moved API keys extraction to linting stage to avoid slowing editor

* Linter fix

--- a/logicle/package.json
+++ b/logicle/package.json
@@ -23,8 +23,10 @@
     "@ai-sdk/anthropic": "^0.0.48",
     "@ai-sdk/google-vertex": "^0.0.35",
     "@ai-sdk/openai": "^0.0.54",
+    "@apidevtools/openapi-schemas": "^2.1.0",
     "@auth/kysely-adapter": "^1.4.2",
     "@boxyhq/saml-jackson": "1.27.0",
+    "@codemirror/lang-yaml": "^6.1.1",
     "@hookform/resolvers": "^3.3.2",
     "@microsoft/fetch-event-source": "^2.0.1",
     "@radix-ui/react-accordion": "^1.2.1",
@@ -47,6 +49,7 @@
     "@readme/openapi-parser": "^2.6.0",
     "@tabler/icons-react": "^2.46.0",
     "@tailwindcss/typography": "0.5.9",
+    "@uiw/react-codemirror": "^4.23.6",
     "ai": "^3.3.20",
     "autoprefixer": "^10.4.16",
     "bcryptjs": "2.4.3",
@@ -92,6 +95,7 @@
     "tailwindcss-animate": "^1.0.7",
     "uuid": "9.0.0",
     "winston": "^3.15.0",
+    "yaml": "^2.6.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -115,7 +119,7 @@
     "eslint-config-next": "^13.5.6",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-react": "7.33.2",
-    "jest": "29.6.4",
+    "jest": "^29.7.0",
     "jest-environment-jsdom": "29.6.4",
     "kysely-codegen": "^0.11.0",
     "lint-staged": "14.0.1",
