--- a/logicle/package.json
+++ b/logicle/package.json
@@ -25,6 +25,9 @@
     "@ai-sdk/openai": "^0.0.54",
     "@apidevtools/openapi-schemas": "^2.1.0",
     "@auth/kysely-adapter": "^1.4.2",
+    "@aws-sdk/hash-node": "^3.370.0",
+    "@aws-sdk/protocol-http": "^3.370.0",
+    "@aws-sdk/s3-request-presigner": "^3.696.0",
     "@boxyhq/saml-jackson": "1.27.0",
     "@codemirror/lang-yaml": "^6.1.1",
     "@hookform/resolvers": "^3.3.2",
