--- a/logicle/package.json
+++ b/logicle/package.json
@@ -69,6 +69,7 @@
     "js-tiktoken": "^1.0.8",
     "json-schema": "^0.4.0",
     "kysely": "^0.27.4",
+    "lru-cache": "^11.0.2",
     "lucide-react": "^0.376.0",
     "micromatch": "^4.0.5",
     "moment": "2.29.4",
