Added a PGP encrypting storage

--- a/logicle/package.json
+++ b/logicle/package.json
@@ -80,6 +80,7 @@
     "node-cache": "^5.1.2",
     "nodemailer": "6.9.4",
     "openai": "^4.72.0",
+    "openpgp": "^6.0.1",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-content-loader": "^7.0.0",
