--- a/logicle/package.json
+++ b/logicle/package.json
@@ -89,6 +89,7 @@
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "2.4.1",
     "react-i18next": "12.3.1",
+    "react-loader-spinner": "^6.1.6",
     "react-markdown": "^9.0.0",
     "react-syntax-highlighter": "^15.5.0",
     "recharts": "^2.13.3",
