POC for express based server

--- a/logicle/package.json
+++ b/logicle/package.json
@@ -2,11 +2,11 @@
   "name": "@logicleai/logicle",
   "version": "0.8.1",
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "npx tsx server.ts",
     "dev:sqlite": "DATABASE_URL=file:///tmp/logicle.sqlite npm run dev",
     "dev:postgres": "DATABASE_URL=postgresql://admin:admin@localhost:5432/logicle npm run dev",
-    "build": "DATABASE_URL=memory: next build",
-    "start": "next start",
+    "build": "DATABASE_URL=memory: next build && npx tsc --project tsconfigserver.json",
+    "start": "node dist/server.js",
     "start:sqlite": "DATABASE_URL=file:///tmp/logicle.sqlite npm run start",
     "start:postgres": "DATABASE_URL=postgresql://admin:admin@localhost:5432/logicle npm run start",
     "check-types": "tsc --pretty --noEmit",
@@ -63,6 +63,7 @@
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
     "eventsource-parser": "^1.0.0",
+    "express": "^4.21.2",
     "i18next": "22.5.1",
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-resources-to-backend": "^1.1.4",
@@ -100,6 +101,7 @@
     "swr": "2.2.2",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "tsx": "^4.19.2",
     "uuid": "9.0.0",
     "winston": "^3.15.0",
     "yaml": "^2.6.0",
@@ -112,6 +114,7 @@
     "@trivago/prettier-plugin-sort-imports": "4.2.0",
     "@types/bcryptjs": "2.4.3",
     "@types/better-sqlite3": "^7.6.9",
+    "@types/express": "^5.0.0",
     "@types/jest": "29.5.4",
     "@types/mocha": "10.0.1",
     "@types/node": "^20.6.3",
