--- a/logicle/package.json
+++ b/logicle/package.json
@@ -112,6 +112,7 @@
     "@trivago/prettier-plugin-sort-imports": "4.2.0",
     "@types/bcryptjs": "2.4.3",
     "@types/better-sqlite3": "^7.6.9",
+    "@types/i18next": "^12.1.0",
     "@types/jest": "29.5.4",
     "@types/mocha": "10.0.1",
     "@types/node": "^20.6.3",
