--- a/logicle/package.json
+++ b/logicle/package.json
@@ -63,7 +63,7 @@
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
     "eventsource-parser": "^1.0.0",
-    "i18next": "22.5.1",
+    "i18next": "^24.1.0",
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-resources-to-backend": "^1.1.4",
     "js-tiktoken": "^1.0.8",
@@ -76,7 +76,6 @@
     "nanoid": "^5.0.4",
     "next": "^15.0.3",
     "next-auth": "^5.0.0-beta.24",
-    "next-i18next": "13.3.0",
     "node-cache": "^5.1.2",
     "nodemailer": "6.9.4",
     "openai": "^4.72.0",
