Preliminary support for  multipart response

--- a/logicle/package.json
+++ b/logicle/package.json
@@ -32,6 +32,7 @@
     "@codemirror/lang-yaml": "^6.1.1",
     "@hookform/resolvers": "^3.3.2",
     "@microsoft/fetch-event-source": "^2.0.1",
+    "@mjackson/multipart-parser": "^0.7.0",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
