--- a/logicle/package.json
+++ b/logicle/package.json
@@ -20,9 +20,9 @@
     "build-ci": "next build"
   },
   "dependencies": {
-    "@ai-sdk/anthropic": "^0.0.48",
-    "@ai-sdk/google-vertex": "^0.0.35",
-    "@ai-sdk/openai": "^0.0.54",
+    "@ai-sdk/anthropic": "^1.1.1",
+    "@ai-sdk/google-vertex": "^2.1.1",
+    "@ai-sdk/openai": "^1.1.1",
     "@apidevtools/openapi-schemas": "^2.1.0",
     "@auth/kysely-adapter": "^1.4.2",
     "@aws-sdk/hash-node": "^3.370.0",
@@ -54,7 +54,7 @@
     "@tabler/icons-react": "^2.46.0",
     "@tailwindcss/typography": "0.5.9",
     "@uiw/react-codemirror": "^4.23.6",
-    "ai": "^3.3.20",
+    "ai": "^4.1.1",
     "autoprefixer": "^10.4.16",
     "bcryptjs": "2.4.3",
     "class-variance-authority": "^0.7.0",
@@ -78,8 +78,8 @@
     "next": "15.1",
     "next-auth": "^5.0.0-beta.24",
     "node-cache": "^5.1.2",
-    "nodemailer": "6.9.4",
-    "openai": "^4.72.0",
+    "nodemailer": "^6.9.16",
+    "openai": "^4.80.0",
     "openpgp": "^6.0.1",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
