--- a/logicle/package.json
+++ b/logicle/package.json
@@ -94,6 +94,7 @@
     "react-syntax-highlighter": "^15.5.0",
     "recharts": "^2.13.3",
     "rehype-katex": "^7.0.0",
+    "rehype-raw": "^7.0.0",
     "remark-gfm": "4.0",
     "remark-math": "^6.0.0",
     "sharp": "^0.32.6",
