Added Perplexity SDK

--- a/logicle/package.json
+++ b/logicle/package.json
@@ -23,6 +23,7 @@
     "@ai-sdk/anthropic": "^1.1.1",
     "@ai-sdk/google-vertex": "^2.1.1",
     "@ai-sdk/openai": "^1.1.1",
+    "@ai-sdk/perplexity": "^0.0.6",
     "@apidevtools/openapi-schemas": "^2.1.0",
     "@auth/kysely-adapter": "^1.4.2",
     "@aws-sdk/hash-node": "^3.370.0",
@@ -54,7 +55,7 @@
     "@tabler/icons-react": "^2.46.0",
     "@tailwindcss/typography": "0.5.9",
     "@uiw/react-codemirror": "^4.23.6",
-    "ai": "^4.1.1",
+    "ai": "^4.1.17",
     "autoprefixer": "^10.4.16",
     "bcryptjs": "2.4.3",
     "class-variance-authority": "^0.7.0",
