--- a/logicle/package.json
+++ b/logicle/package.json
@@ -138,7 +138,8 @@
     "prettier-plugin-tailwindcss": "0.5.4",
     "tailwindcss": "3.3.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.24.0"
   },
   "lint-staged": {
     "*.{js,ts}": "eslint --cache --fix",
