--- a/logicle/package.json
+++ b/logicle/package.json
@@ -11,7 +11,7 @@
     "start:postgres": "DATABASE_URL=postgresql://admin:admin@localhost:5432/logicle npm run start",
     "check-types": "tsc --pretty --noEmit",
     "check-format": "prettier --check .",
-    "check-lint": "eslint . --ext ts --ext tsx --ext js",
+    "check-lint": "eslint .",
     "format": "prettier --write .",
     "test-all": "npm run check-format && npm run check-lint && npm run check-types && npm run build",
     "test": "jest",
@@ -122,13 +122,14 @@
     "@types/pg": "^8.11.2",
     "@types/react": "18.2.21",
     "@types/uuid": "9.0.3",
-    "@typescript-eslint/eslint-plugin": "6.5.0",
-    "@typescript-eslint/parser": "6.5.0",
+    "@typescript-eslint/eslint-plugin": "^8.24.0",
+    "@typescript-eslint/parser": "^8.24.0",
     "better-sqlite3": "^9.4.3",
-    "eslint": "8.48.0",
-    "eslint-config-next": "^13.5.6",
-    "eslint-config-prettier": "9.0.0",
-    "eslint-plugin-react": "7.33.2",
+    "eslint": "^9.20.1",
+    "eslint-config-next": "^15.1.7",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-i18next": "^6.1.1",
+    "eslint-plugin-react": "^7.37.4",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "29.6.4",
     "kysely-codegen": "^0.11.0",
@@ -137,7 +138,8 @@
     "prettier-plugin-tailwindcss": "0.5.4",
     "tailwindcss": "3.3.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.24.0"
   },
   "lint-staged": {
     "*.{js,ts}": "eslint --cache --fix",
