Using undici for fetch, as there's no timeout option on Web APIs

--- a/logicle/package.json
+++ b/logicle/package.json
@@ -102,6 +102,7 @@
     "swr": "2.2.2",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "undici": "^7.3.0",
     "uuid": "9.0.0",
     "winston": "^3.15.0",
     "yaml": "^2.6.0",
