--- a/logicle/.env
+++ b/logicle/.env
@@ -17,3 +17,4 @@ ENABLE_CHAT_AUTOSUMMARY=1
 CHAT_ATTACHMENTS_ALLOWED_FORMATS=image/jpeg,image/png,image/webp,image/gif
 ENABLE_LOGICLE_CLOUD_IMAGE_PROXY=0
 FILE_STORAGE_ENCRYPTION_KEY=CHANGEIT
+OPENAPI_FETCH_TIMEOUT_SECS=3600
