--- a/logicle/.env
+++ b/logicle/.env
@@ -18,3 +18,5 @@ CHAT_ATTACHMENTS_ALLOWED_FORMATS=image/jpeg,image/png,image/webp,image/gif
 ENABLE_LOGICLE_CLOUD_IMAGE_PROXY=0
 FILE_STORAGE_ENCRYPTION_KEY=CHANGEIT
 OPENAPI_FETCH_TIMEOUT_SECS=3600
+# Limit the number of conversations returned by conversion list API
+# MAX_CONVERSATION_RESULTS=1000
