--- a/logicle/.env
+++ b/logicle/.env
@@ -9,6 +9,7 @@ DO_NOT_TRACK=1
 BOXYHQ_NO_ANALYTICS=1
 SSO_CONFIG_LOCK=0
 LLM_PROVIDER_CONFIG_LOCK=0
+ENABLE_CHAT_SHARING=0
 ENABLE_WORKSPACES=1
 ENABLE_TOOLS=0
 ENABLE_CHAT_ATTACHMENTS=1
