--- a/logicle/.env
+++ b/logicle/.env
@@ -19,6 +19,10 @@ CHAT_ATTACHMENTS_ALLOWED_FORMATS=image/jpeg,image/png,image/webp,image/gif
 ENABLE_LOGICLE_CLOUD_IMAGE_PROXY=0
 FILE_STORAGE_ENCRYPTION_KEY=CHANGEIT
 OPENAPI_FETCH_TIMEOUT_SECS=3600
-ENABLE_ASSISTANT_KNOWLEDGE=0
+# ASSISTANT_KNOWLEDGE can be 
+# - none: no support
+# - prompt: knowledge is inserted in the dev prompt
+# - tool: LLM may request an ad-hoc tool to provide a file list
+ASSISTANT_KNOWLEDGE=none
 # Limit the number of conversations returned by conversion list API
 # MAX_CONVERSATION_RESULTS=1000
