--- a/logicle/tsconfig.json
+++ b/logicle/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "types": ["node", "jest"],
     "target": "es2017",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": ["dom", "dom.iterable"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
