--- a/logicle/.env
+++ b/logicle/.env
@@ -18,6 +18,7 @@ ENABLE_CHAT_AUTOSUMMARY=1
 CHAT_ATTACHMENTS_ALLOWED_FORMATS=image/jpeg,image/png,image/webp,image/gif
 ENABLE_LOGICLE_CLOUD_IMAGE_PROXY=0
 FILE_STORAGE_ENCRYPTION_KEY=CHANGEIT
+OPENAPI_TOOL_REQUIRE_CONFIRM=0
 OPENAPI_FETCH_TIMEOUT_SECS=3600
 # ASSISTANT_KNOWLEDGE can be 
 # - none: no support
