--- a/logicle/.env
+++ b/logicle/.env
@@ -15,6 +15,8 @@ ENABLE_TOOLS=0
 ENABLE_CHAT_ATTACHMENTS=1
 ENABLE_SIGNUP=1
 ENABLE_CHAT_AUTOSUMMARY=1
+# Use the chat backend/model for autosummary. If set to 0, a reasonable backend/model is found and used
+CHAT_AUTOSUMMARY_USE_CHAT_BACKEND=0
 CHAT_ATTACHMENTS_ALLOWED_FORMATS=image/jpeg,image/png,image/webp,image/gif
 ENABLE_LOGICLE_CLOUD_IMAGE_PROXY=0
 FILE_STORAGE_ENCRYPTION_KEY=CHANGEIT
