--- a/logicle/package.json
+++ b/logicle/package.json
@@ -2,7 +2,7 @@
   "name": "@logicleai/logicle",
   "version": "0.13.2",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "dev:sqlite": "DATABASE_URL=file:///tmp/logicle.sqlite npm run dev",
     "dev:postgres": "DATABASE_URL=postgresql://admin:admin@localhost:5432/logicle npm run dev",
     "build": "DATABASE_URL=memory: next build",
@@ -29,6 +29,7 @@
     "@aws-sdk/hash-node": "^3.370.0",
     "@aws-sdk/protocol-http": "^3.370.0",
     "@aws-sdk/s3-request-presigner": "^3.696.0",
+    "@aws-sdk/util-format-url": "^3.734.0",
     "@boxyhq/saml-jackson": "1.27.0",
     "@codemirror/lang-yaml": "^6.1.1",
     "@hookform/resolvers": "^3.3.2",
@@ -82,6 +83,7 @@
     "nodemailer": "^6.9.16",
     "openai": "^4.80.0",
     "openpgp": "^6.0.1",
+    "pg": "^8.14.1",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-content-loader": "^7.0.0",
@@ -103,6 +105,8 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "undici": "^7.3.0",
+    "unified": "^11.0.5",
+    "unist-util-visit": "^5.0.0",
     "uuid": "9.0.0",
     "winston": "^3.15.0",
     "yaml": "^2.6.0",
@@ -117,6 +121,7 @@
     "@types/better-sqlite3": "^7.6.9",
     "@types/i18next": "^12.1.0",
     "@types/jest": "29.5.4",
+    "@types/mdast": "^4.0.4",
     "@types/mocha": "10.0.1",
     "@types/node": "^20.6.3",
     "@types/nodemailer": "6.4.9",
