--- a/logicle/package.json
+++ b/logicle/package.json
@@ -32,6 +32,7 @@
     "@aws-sdk/util-format-url": "^3.734.0",
     "@boxyhq/saml-jackson": "1.27.0",
     "@codemirror/lang-yaml": "^6.1.1",
+    "@codemirror/lint": "^6.8.4",
     "@hookform/resolvers": "^3.3.2",
     "@microsoft/fetch-event-source": "^2.0.1",
     "@mjackson/multipart-parser": "^0.7.0",
@@ -55,6 +56,7 @@
     "@readme/openapi-parser": "^2.6.0",
     "@tabler/icons-react": "^2.46.0",
     "@tailwindcss/typography": "0.5.9",
+    "@types/codemirror": "^5.60.15",
     "@uiw/react-codemirror": "^4.23.6",
     "ai": "^4.1.17",
     "autoprefixer": "^10.4.16",
