--- a/logicle/package.json
+++ b/logicle/package.json
@@ -59,6 +59,8 @@
     "@types/codemirror": "^5.60.15",
     "@uiw/react-codemirror": "^4.23.6",
     "ai": "^4.1.17",
+    "ajv": "^8.17.1",
+    "ajv-draft-04": "^1.0.0",
     "autoprefixer": "^10.4.16",
     "bcryptjs": "2.4.3",
     "class-variance-authority": "^0.7.0",
@@ -85,6 +87,7 @@
     "node-cache": "^5.1.2",
     "nodemailer": "^6.9.16",
     "openai": "^4.80.0",
+    "openapi-types": "^12.1.3",
     "openpgp": "^6.0.1",
     "pg": "^8.14.1",
     "react": "^18.2.0",
