--- a/logicle/package.json
+++ b/logicle/package.json
@@ -35,6 +35,7 @@
     "@codemirror/lint": "^6.8.4",
     "@hookform/resolvers": "^3.3.2",
     "@microsoft/fetch-event-source": "^2.0.1",
+    "@mjackson/headers": "^0.10.0",
     "@mjackson/multipart-parser": "^0.7.0",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.0.5",
@@ -70,6 +71,7 @@
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
     "eventsource-parser": "^1.0.0",
+    "form-data": "^4.0.2",
     "google-auth-library": "^9.15.1",
     "i18next": "^24.1.0",
     "i18next-browser-languagedetector": "^7.1.0",
