--- a/logicle/package.json
+++ b/logicle/package.json
@@ -78,6 +78,7 @@
     "i18next-resources-to-backend": "^1.1.4",
     "js-tiktoken": "^1.0.8",
     "json-schema": "^0.4.0",
+    "katex": "^0.16.21",
     "kysely": "^0.27.4",
     "lru-cache": "^11.0.2",
     "lucide-react": "^0.376.0",
