--- a/logicle/package.json
+++ b/logicle/package.json
@@ -2,7 +2,7 @@
   "name": "@logicleai/logicle",
   "version": "0.13.2",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "dev:sqlite": "DATABASE_URL=file:///tmp/logicle.sqlite npm run dev",
     "dev:postgres": "DATABASE_URL=postgresql://admin:admin@localhost:5432/logicle npm run dev",
     "build": "DATABASE_URL=memory: next build",
@@ -29,10 +29,13 @@
     "@aws-sdk/hash-node": "^3.370.0",
     "@aws-sdk/protocol-http": "^3.370.0",
     "@aws-sdk/s3-request-presigner": "^3.696.0",
+    "@aws-sdk/util-format-url": "^3.734.0",
     "@boxyhq/saml-jackson": "1.27.0",
     "@codemirror/lang-yaml": "^6.1.1",
+    "@codemirror/lint": "^6.8.4",
     "@hookform/resolvers": "^3.3.2",
     "@microsoft/fetch-event-source": "^2.0.1",
+    "@mjackson/headers": "^0.10.0",
     "@mjackson/multipart-parser": "^0.7.0",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.0.5",
@@ -54,8 +57,11 @@
     "@readme/openapi-parser": "^2.6.0",
     "@tabler/icons-react": "^2.46.0",
     "@tailwindcss/typography": "0.5.9",
+    "@types/codemirror": "^5.60.15",
     "@uiw/react-codemirror": "^4.23.6",
     "ai": "^4.1.17",
+    "ajv": "^8.17.1",
+    "ajv-draft-04": "^1.0.0",
     "autoprefixer": "^10.4.16",
     "bcryptjs": "2.4.3",
     "class-variance-authority": "^0.7.0",
@@ -65,11 +71,14 @@
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
     "eventsource-parser": "^1.0.0",
+    "form-data": "^4.0.2",
+    "google-auth-library": "^9.15.1",
     "i18next": "^24.1.0",
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-resources-to-backend": "^1.1.4",
     "js-tiktoken": "^1.0.8",
     "json-schema": "^0.4.0",
+    "katex": "^0.16.21",
     "kysely": "^0.27.4",
     "lru-cache": "^11.0.2",
     "lucide-react": "^0.376.0",
@@ -81,7 +90,9 @@
     "node-cache": "^5.1.2",
     "nodemailer": "^6.9.16",
     "openai": "^4.80.0",
+    "openapi-types": "^12.1.3",
     "openpgp": "^6.0.1",
+    "pg": "^8.14.1",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-content-loader": "^7.0.0",
@@ -103,6 +114,8 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "undici": "^7.3.0",
+    "unified": "^11.0.5",
+    "unist-util-visit": "^5.0.0",
     "uuid": "9.0.0",
     "winston": "^3.15.0",
     "yaml": "^2.6.0",
@@ -117,6 +130,7 @@
     "@types/better-sqlite3": "^7.6.9",
     "@types/i18next": "^12.1.0",
     "@types/jest": "29.5.4",
+    "@types/mdast": "^4.0.4",
     "@types/mocha": "10.0.1",
     "@types/node": "^20.6.3",
     "@types/nodemailer": "6.4.9",
