--- a/logicle/package.json
+++ b/logicle/package.json
@@ -23,6 +23,7 @@
     "@ai-sdk/anthropic": "^1.2.0",
     "@ai-sdk/google-vertex": "^2.2.1",
     "@ai-sdk/openai": "^1.3.0",
+    "@ai-sdk/openai-compatible": "^0.2.0",
     "@ai-sdk/perplexity": "^1.1.0",
     "@apidevtools/openapi-schemas": "^2.1.0",
     "@auth/kysely-adapter": "^1.4.2",
