--- a/logicle/package.json
+++ b/logicle/package.json
@@ -25,6 +25,8 @@
     "@ai-sdk/openai": "^1.3.0",
     "@ai-sdk/openai-compatible": "^0.2.0",
     "@ai-sdk/perplexity": "^1.1.0",
+    "@ai-sdk/provider": "^1.1.0",
+    "@ai-sdk/provider-utils": "^2.2.0",
     "@apidevtools/openapi-schemas": "^2.1.0",
     "@auth/kysely-adapter": "^1.4.2",
     "@aws-sdk/client-s3": "^3.758.0",
@@ -40,6 +42,7 @@
     "@microsoft/fetch-event-source": "^2.0.1",
     "@mjackson/headers": "^0.10.0",
     "@mjackson/multipart-parser": "^0.7.0",
+    "@openrouter/ai-sdk-provider": "^0.4.3",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
