--- a/logicle/package.json
+++ b/logicle/package.json
@@ -20,10 +20,13 @@
     "build-ci": "next build"
   },
   "dependencies": {
-    "@ai-sdk/anthropic": "^1.1.1",
-    "@ai-sdk/google-vertex": "^2.1.1",
-    "@ai-sdk/openai": "^1.1.1",
-    "@ai-sdk/perplexity": "^0.0.6",
+    "@ai-sdk/anthropic": "^1.2.0",
+    "@ai-sdk/google-vertex": "^2.2.1",
+    "@ai-sdk/openai": "^1.3.0",
+    "@ai-sdk/openai-compatible": "^0.2.0",
+    "@ai-sdk/perplexity": "^1.1.0",
+    "@ai-sdk/provider": "^1.1.0",
+    "@ai-sdk/provider-utils": "^2.2.0",
     "@apidevtools/openapi-schemas": "^2.1.0",
     "@auth/kysely-adapter": "^1.4.2",
     "@aws-sdk/client-s3": "^3.758.0",
@@ -39,6 +42,7 @@
     "@microsoft/fetch-event-source": "^2.0.1",
     "@mjackson/headers": "^0.10.0",
     "@mjackson/multipart-parser": "^0.7.0",
+    "@openrouter/ai-sdk-provider": "^0.4.3",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -61,7 +65,7 @@
     "@tailwindcss/typography": "0.5.9",
     "@types/codemirror": "^5.60.15",
     "@uiw/react-codemirror": "^4.23.6",
-    "ai": "^4.1.17",
+    "ai": "^4.2.0",
     "ajv": "^8.17.1",
     "ajv-draft-04": "^1.0.0",
     "autoprefixer": "^10.4.16",
