Make assistant table sortable

--- a/logicle/package.json
+++ b/logicle/package.json
@@ -63,6 +63,7 @@
     "@readme/openapi-parser": "^2.6.0",
     "@tabler/icons-react": "^2.46.0",
     "@tailwindcss/typography": "0.5.9",
+    "@tanstack/react-table": "^8.21.2",
     "@uiw/react-codemirror": "^4.23.6",
     "ai": "^4.2.0",
     "ajv": "^8.17.1",
