--- a/deploy/docker-compose/docker-compose-postgres-proxy.yml
+++ b/deploy/docker-compose/docker-compose-postgres-proxy.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   app:
-    image: ghcr.io/logicleai/logicle:v0.15.1
+    image: ghcr.io/logicleai/logicle:v0.16.rc1
     restart: always
     environment:
       PORT: 8080
