--- a/logicle/package.json
+++ b/logicle/package.json
@@ -30,12 +30,10 @@
     "@apidevtools/openapi-schemas": "^2.1.0",
     "@auth/kysely-adapter": "^1.4.2",
     "@aws-sdk/client-s3": "^3.758.0",
-    "@aws-sdk/hash-node": "^3.370.0",
     "@aws-sdk/lib-storage": "^3.758.0",
-    "@aws-sdk/protocol-http": "^3.370.0",
     "@aws-sdk/s3-request-presigner": "^3.696.0",
     "@aws-sdk/util-format-url": "^3.734.0",
-    "@boxyhq/saml-jackson": "1.27.0",
+    "@boxyhq/saml-jackson": "1.45.0",
     "@codemirror/lang-yaml": "^6.1.1",
     "@codemirror/lint": "^6.8.4",
     "@hookform/resolvers": "^3.3.2",
@@ -61,7 +59,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@readme/openapi-parser": "^2.6.0",
-    "@tabler/icons-react": "^2.46.0",
+    "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/typography": "0.5.9",
     "@tanstack/react-table": "^8.21.2",
     "@uiw/react-codemirror": "^4.23.6",
@@ -72,7 +70,7 @@
     "bcryptjs": "2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "cmdk": "^0.2.1",
+    "cmdk": "^1.1.1",
     "cookies-next": "3.0.0",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
@@ -87,11 +85,11 @@
     "katex": "^0.16.21",
     "kysely": "^0.27.4",
     "lru-cache": "^11.0.2",
-    "lucide-react": "^0.376.0",
+    "lucide-react": "^0.487.0",
     "micromatch": "^4.0.5",
     "moment": "2.29.4",
     "nanoid": "^5.0.4",
-    "next": "^15.2.3",
+    "next": "^15.3.0",
     "next-auth": "5.0.0-beta.25",
     "node-cache": "^5.1.2",
     "nodemailer": "^6.9.16",
@@ -99,11 +97,10 @@
     "openapi-types": "^12.1.3",
     "openpgp": "^6.0.1",
     "pg": "^8.14.1",
-    "react": "^18.2.0",
+    "react": "^19.1.0",
     "react-circular-progressbar": "^2.1.0",
     "react-content-loader": "^7.0.0",
-    "react-day-picker": "^8.9.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "^19.1.0",
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "2.4.1",
     "react-i18next": "12.3.1",
@@ -116,7 +113,7 @@
     "remark-gfm": "4.0",
     "remark-math": "^6.0.0",
     "sharp": "^0.32.6",
-    "swr": "2.2.2",
+    "swr": "2.3.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "undici": "^7.3.0",
@@ -130,7 +127,6 @@
   "devDependencies": {
     "@tailwindcss/forms": "0.5.6",
     "@testing-library/jest-dom": "6.1.2",
-    "@testing-library/react": "14.0.0",
     "@trivago/prettier-plugin-sort-imports": "4.2.0",
     "@types/bcryptjs": "2.4.3",
     "@types/better-sqlite3": "^7.6.9",
@@ -171,6 +167,10 @@
   "overrides": {
     "@auth/kysely-adapter": {
       "kysely": "^0.27.4"
+    },
+    "react-loader-spinner": {
+      "react": "^18 || ^19",
+      "react-dom": "^18 || ^19"
     }
   }
 }
