--- a/deploy/docker-compose/docker-compose-postgres.yml
+++ b/deploy/docker-compose/docker-compose-postgres.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   app:
-    image: ghcr.io/logicleai/logicle:v0.16.rc4
+    image: ghcr.io/logicleai/logicle:v0.16.0
     restart: always
     environment:
       PORT: 80
