--- a/logicle/package.json
+++ b/logicle/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@logicleai/logicle",
-  "version": "0.16.rc4",
+  "version": "0.16.0",
   "scripts": {
     "dev": "next dev --turbo",
     "dev:sqlite": "DATABASE_URL=file:///tmp/logicle.sqlite npm run dev",
@@ -22,7 +22,7 @@
   "dependencies": {
     "@ai-sdk/anthropic": "^1.2.0",
     "@ai-sdk/google-vertex": "^2.2.1",
-    "@ai-sdk/openai": "^1.3.0",
+    "@ai-sdk/openai": "^1.3.16",
     "@ai-sdk/openai-compatible": "^0.2.0",
     "@ai-sdk/perplexity": "^1.1.0",
     "@ai-sdk/provider": "^1.1.0",
