--- a/logicle/package.json
+++ b/logicle/package.json
@@ -108,6 +108,7 @@
     "react-markdown": "^9.0.0",
     "react-syntax-highlighter": "^15.5.0",
     "recharts": "^2.13.3",
+    "rehype-external-links": "^3.0.0",
     "rehype-katex": "^7.0.0",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "4.0",
