Replaced Flex based table with SimpleTable with ordering

--- a/logicle/package.json
+++ b/logicle/package.json
@@ -80,6 +80,7 @@
     "i18next": "^24.1.0",
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-resources-to-backend": "^1.1.4",
+    "javascript-time-ago": "^2.5.11",
     "js-tiktoken": "^1.0.8",
     "json-schema": "^0.4.0",
     "katex": "^0.16.21",
@@ -107,6 +108,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-markdown": "^9.0.0",
     "react-syntax-highlighter": "^15.5.0",
+    "react-time-ago": "^7.3.3",
     "recharts": "^2.13.3",
     "rehype-external-links": "^3.0.0",
     "rehype-katex": "^7.0.0",
