Add mermaid support

--- a/logicle/package.json
+++ b/logicle/package.json
@@ -37,6 +37,7 @@
     "@codemirror/lang-yaml": "^6.1.1",
     "@codemirror/lint": "^6.8.4",
     "@hookform/resolvers": "^3.3.2",
+    "@lightenna/react-mermaid-diagram": "^1.0.17",
     "@microsoft/fetch-event-source": "^2.0.1",
     "@mjackson/headers": "^0.10.0",
     "@mjackson/multipart-parser": "^0.7.0",
@@ -87,6 +88,7 @@
     "kysely": "^0.27.4",
     "lru-cache": "^11.0.2",
     "lucide-react": "^0.487.0",
+    "mermaid": "^11.6.0",
     "micromatch": "^4.0.5",
     "moment": "2.29.4",
     "nanoid": "^5.0.4",
@@ -115,6 +117,7 @@
     "rehype-raw": "^7.0.0",
     "remark-gfm": "4.0",
     "remark-math": "^6.0.0",
+    "remark-mermaid-plugin": "^1.0.2",
     "sharp": "^0.32.6",
     "swr": "2.3.3",
     "tailwind-merge": "^2.2.1",
