--- a/logicle/package.json
+++ b/logicle/package.json
@@ -37,7 +37,6 @@
     "@codemirror/lang-yaml": "^6.1.1",
     "@codemirror/lint": "^6.8.4",
     "@hookform/resolvers": "^3.3.2",
-    "@lightenna/react-mermaid-diagram": "^1.0.17",
     "@microsoft/fetch-event-source": "^2.0.1",
     "@mjackson/headers": "^0.10.0",
     "@mjackson/multipart-parser": "^0.7.0",
@@ -117,6 +116,7 @@
     "rehype-raw": "^7.0.0",
     "remark-gfm": "4.0",
     "remark-math": "^6.0.0",
+    "remark-mdx": "^3.1.0",
     "remark-mermaid-plugin": "^1.0.2",
     "sharp": "^0.32.6",
     "swr": "2.3.3",
