Add direct dependencies jose / openid-client

--- a/logicle/package.json
+++ b/logicle/package.json
@@ -81,6 +81,7 @@
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-resources-to-backend": "^1.1.4",
     "javascript-time-ago": "^2.5.11",
+    "jose": "^6.0.11",
     "js-tiktoken": "^1.0.8",
     "json-schema": "^0.4.0",
     "katex": "^0.16.21",
@@ -97,6 +98,7 @@
     "nodemailer": "^6.9.16",
     "openai": "^4.96.0",
     "openapi-types": "^12.1.3",
+    "openid-client": "^6.4.2",
     "openpgp": "^6.0.1",
     "pg": "^8.14.1",
     "react": "^19.1.0",
