Add an environment option to enable chat tree navigation

--- a/logicle/.env
+++ b/logicle/.env
@@ -11,6 +11,7 @@ BOXYHQ_NO_ANALYTICS=1
 SSO_CONFIG_LOCK=0
 LLM_PROVIDER_CONFIG_LOCK=0
 ENABLE_CHAT_SHARING=0
+ENABLE_CHAT_TREE_NAVIGATION=0
 ENABLE_WORKSPACES=1
 ENABLE_CHAT_ATTACHMENTS=1
 ENABLE_SIGNUP=1
